2003-09-18  Mike Stump  <mrs@apple.com>

	* c-ppoutput.c (print):  Use fileline typedef for field 'line'.
	(print_line, maybe_print_line, cb_define, cb_undef, cb_include,
	cb_ident, cb_def_pragma):  Use fileline typedef.
	* cpphash.h (struct cpp_reader):  Likewise for field out.first_line.

2003-09-15  Mike Stump  <mrs@apple.com>

	* dwarf2asm.c (dw2_output_indirect_constants): Reinitialize
	indirect_pool for new output file.
	* dwarf2out.c (dwarf2out_frame_finish): Reinitialize cie_cfi_head for
	new output file.

2003-09-15  Per Bothner  <pbothner@apple.com>

	* c-common.c (warn_fragment_invalidation):  New "flag" - for
	now just a macro for !quiet_flag.
	(cb_enter_fragment, cb_exit_fragmnet):  Be more specific when
	warning about invalidating a fragment.

2003-09-12  Ziemowit Laski  <zlaski@apple.com>

	* pretty-print.c (pp_construct): Use xcalloc instead of xmalloc
	when allocating pp->buffer.

2003-09-12  Per Bothner  <pbothner@apple.com>

	* c-decl.c (restore_fragment_bindings):  List of tags needs tree_cons.

	* c-decl.c (start_function): Increment currently_nested.
	(finish_function):  Decrement currently_nested.

	* c-common.c (c-common.c):  Try to make clearer, and add two comments.

	* cpplib.c (_cpp_pop_buffer):  Do generate a call-back for
	leaving main file.
	* c-ppoutput.c (pp_file_change):  Check for map==NULL, for LC_LEAVE.
	* fix-header.c (cb_file_change):  Likewise.

	* toplev.c (do_compile):  Remove unwanted push_srcloc/pop_srcloc.

	* opts.c (common_handle_option):  Remove bogus cast.

	* config/darwin.c (machopic_finish):  Zero out machopic_stubs and
	machopic_non_lazy_pointers when done.  Needed for compile-server.

2003-09-11  Mike Stump  <mrs@apple.com>

	* c-lex.c (fe_file_change): Don't transform to_line with SOURCE_LINE.

2003-09-09  Mike Stump  <mrs@apple.com>

	* common.opt (fserver): Make it JoinedOrMissing.
	* flags.h (compiler_server): Update doc.
	* opts.c (common_handle_option, case OPT_fserver): Handle selection